src/main/java/com/example/fas/exceptions/user/error/CreateUserException.java
package com.example.fas.exceptions.user.error;

public class CreateUserException extends RuntimeException {
    public CreateUserException(String message) {
        super(message);
    }
}
